# rs-nfc1-sys

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: list_readers.rs
src/: lib.rs  test.rs
