[package]
name = "nfc1-sys"
version = "0.2.0"
description = "Rust bindings for libnfc"
authors = ["Alexander Sagen <alexander@sagen.me>"]
repository = "https://github.com/alexrsagen/rs-nfc1-sys"
readme = "README.md"
license = "MIT"
edition = "2018"
links = "nfc"

[features]
vendored = []
drivers = []
logging = ["vendored"]
conffiles = ["vendored"]
envvars = ["vendored"]
driver_pcsc = ["vendored"]
driver_acr122_pcsc = ["vendored"]
driver_acr122_usb = ["vendored"]
driver_acr122s = ["vendored"]
driver_arygon = ["vendored"]
driver_pn532_uart = ["vendored"]
driver_pn53x_usb = ["vendored"]
default_drivers = [
    "driver_acr122_usb",
    "driver_acr122s",
    "driver_arygon",
    "driver_pn532_uart",
    "driver_pn53x_usb",
]
default = ["vendored", "drivers", "default_drivers"]

[dependencies]
libusb1-sys = { version = "0.5", features = ["vendored"] }
usb-compat-01-sys = "0.2"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.58"
pkg-config = "0.3"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[lib]
crate-type = ["rlib", "staticlib"]
