[package]
name = "nfc1-sys"
version = "0.3.0"
description = "Low-level Rust bindings for libnfc. For high-level safe bindings, see crate nfc1."
authors = ["Alexander Sagen <alexander@sagen.me>"]
repository = "https://github.com/alexrsagen/rs-nfc1-sys"
readme = "README.md"
license = "MIT"
edition = "2018"
links = "nfc"

[features]
vendored = ["libusb1-sys/vendored", "usb-compat-01-sys", "cmake"]
drivers = []
logging = ["vendored"]
usb_logging = ["vendored", "usb-compat-01-sys/logging"]
conffiles = ["vendored"]
envvars = ["vendored"]
driver_pcsc = ["vendored"]
driver_acr122_pcsc = ["vendored"]
driver_acr122_usb = ["vendored"]
driver_acr122s = ["vendored"]
driver_arygon = ["vendored"]
driver_pn532_uart = ["vendored"]
driver_pn53x_usb = ["vendored"]
default_drivers = [
    "driver_acr122_usb",
    "driver_acr122s",
    "driver_arygon",
    "driver_pn532_uart",
    "driver_pn53x_usb",
]
default = ["vendored", "drivers", "default_drivers"]

[dependencies]
libusb1-sys = { version = "0.5", optional = true }
usb-compat-01-sys = { version = "0.2", optional = true }

[build-dependencies]
cmake = { version = "0.1", optional = true }
cc = "1.0"
bindgen = "0.58"
pkg-config = "0.3"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
find-winsdk = "0.2"

[lib]
crate-type = ["rlib", "staticlib"]
