[package]
name = "nfc1-sys"
version = "0.3.13"
description = "Low-level Rust bindings for libnfc. For high-level safe bindings, see crate nfc1."
authors = ["Alexander Sagen <alexander@sagen.me>"]
repository = "https://github.com/alexrsagen/rs-nfc1-sys"
readme = "README.md"
license = "MIT"
edition = "2021"
links = "nfc"

[features]
vendored = ["libusb1-sys/vendored", "usb-compat-01-sys", "cmake"]
drivers = []
logging = ["vendored"]
usb_logging = ["vendored", "usb-compat-01-sys/logging"]
conffiles = ["vendored"]
envvars = ["vendored"]
driver_pcsc = ["vendored"]
driver_acr122_pcsc = ["vendored"]
driver_acr122_usb = ["vendored"]
driver_acr122s = ["vendored"]
driver_arygon = ["vendored"]
driver_pn532_i2c = ["vendored"]
driver_pn532_spi = ["vendored"]
driver_pn532_uart = ["vendored"]
driver_pn53x_usb = ["vendored"]
driver_pn71xx = ["vendored"]
default_drivers = [
    "driver_acr122_usb",
    "driver_acr122s",
    "driver_arygon",
    "driver_pn532_uart",
    "driver_pn53x_usb",
    "driver_pn71xx",
]
default = ["vendored", "drivers", "default_drivers"]

[target.'cfg(target_os = "linux")'.features]
default_drivers = [
    "driver_acr122_usb",
    "driver_acr122s",
    "driver_arygon",
    "driver_pn532_i2c",
    "driver_pn532_spi",
    "driver_pn532_uart",
    "driver_pn53x_usb",
    "driver_pn71xx",
]

[dependencies]
libusb1-sys = { version = "0.7", optional = true }
usb-compat-01-sys = { version = "0.3", optional = true }

[build-dependencies]
cmake = { version = "0.1", optional = true }
cc = "1.2"
bindgen = "0.72"
pkg-config = "0.3"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
find-winsdk = "0.2"

[lib]
crate-type = ["rlib", "staticlib"]
